force-app/main/default/objects/ZAddress__c/ZAddress__c.object-meta.xml
<CustomObject>
    <description>Contains all Z Addresses for Quote</description>
    <label>ZAddress</label>
    <nameField>
        <displayFormat>ZA-{00000000}</displayFormat>
        <label>ZAddress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zaddresss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>