force-app/main/default/objects/ZAddress__c/fields/AddressText__c.field-meta.xml
<CustomField>
    <fullName>AddressText__c</fullName>
    <label>AddressText</label>
    <type>TextArea</type>
</CustomField>