force-app/main/default/objects/ZAddress__c/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <label>AddressType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ServiceAddress</fullName>
            </value>
            <value>
                <fullName>PostalAddress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>