force-app/main/default/objects/ZAddress__c/fields/BuildingName__c.field-meta.xml
<CustomField>
    <fullName>BuildingName__c</fullName>
    <label>BuildingName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>