force-app/main/default/objects/ZAddress__c/fields/BuildingNumber__c.field-meta.xml
<CustomField>
    <fullName>BuildingNumber__c</fullName>
    <label>BuildingNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>