force-app/main/default/objects/ZAddress__c/fields/BuildingSubNumber__c.field-meta.xml
<CustomField>
    <fullName>BuildingSubNumber__c</fullName>
    <label>BuildingSubNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>