force-app/main/default/objects/ZAddress__c/fields/Circuit_Price_QuoteId__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Price_QuoteId__c</fullName>
    <label>Circuit Price QuoteId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>