force-app/main/default/objects/ZAddress__c/fields/IsInFrontierFootprint__c.field-meta.xml
<CustomField>
    <fullName>IsInFrontierFootprint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInFrontierFootprint</label>
    <type>Checkbox</type>
</CustomField>