force-app/main/default/objects/ZAddress__c/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <label>Locality</label>
    <length>35</length>
    <type>Text</type>
</CustomField>