force-app/main/default/objects/ZAddress__c/fields/NPA__c.field-meta.xml
<CustomField>
    <fullName>NPA__c</fullName>
    <label>NPA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>