force-app/main/default/objects/ZAddress__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>8</length>
    <type>Text</type>
</CustomField>