force-app/main/default/objects/ZAddress__c/fields/Quote_Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Number__c</fullName>
    <label>Quote Line Item Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>