force-app/main/default/objects/ZAddress__c/fields/Quote_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Zaddresss</relationshipLabel>
    <relationshipName>Zaddresss</relationshipName>
    <type>Lookup</type>
</CustomField>