force-app/main/default/objects/ZAddress__c/fields/ServiceControlNumber__c.field-meta.xml
<CustomField>
    <fullName>ServiceControlNumber__c</fullName>
    <label>ServiceControlNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>