force-app/main/default/objects/ZAddress__c/fields/ServiceSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ServiceSequenceNumber__c</fullName>
    <label>ServiceSequenceNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>