force-app/main/default/objects/ZAddress__c/fields/StreetDirection__c.field-meta.xml
<CustomField>
    <fullName>StreetDirection__c</fullName>
    <label>StreetDirection</label>
    <length>5</length>
    <type>Text</type>
</CustomField>