force-app/main/default/objects/ZAddress__c/fields/StreetName__c.field-meta.xml
<CustomField>
    <fullName>StreetName__c</fullName>
    <label>StreetName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>