force-app/main/default/objects/ZAddress__c/fields/StreetNrFirst__c.field-meta.xml
<CustomField>
    <fullName>StreetNrFirst__c</fullName>
    <label>StreetNrFirst</label>
    <length>50</length>
    <type>Text</type>
</CustomField>