force-app/main/default/objects/ZAddress__c/fields/StreetSubDescription__c.field-meta.xml
<CustomField>
    <fullName>StreetSubDescription__c</fullName>
    <label>StreetSubDescription</label>
    <length>50</length>
    <type>Text</type>
</CustomField>