force-app/main/default/objects/ZAddress__c/fields/StreetSuffix__c.field-meta.xml
<CustomField>
    <fullName>StreetSuffix__c</fullName>
    <label>StreetSuffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>