force-app/main/default/objects/ZAddress__c/fields/Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Subdivision__c</fullName>
    <label>Subdivision</label>
    <length>10</length>
    <type>Text</type>
</CustomField>