force-app/main/default/objects/ZAddress__c/fields/Z_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Z_Service_Address__c</fullName>
    <label>Z Service Address</label>
    <type>TextArea</type>
</CustomField>